# pyrpc

./: LICENSE  README.md  pyproject.toml
src/pyrpc/: __init__.py  client.py  server.py
src/pyrpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
